--- a/src/fontstrap.css
+++ b/src/fontstrap.css
@@ -21,6 +21,9 @@ body{
 .size-75rem, .xs-up-75rem{
 	font-size:0.75rem;
 }
+.size-100rem, .xs-up-100rem{
+	font-size:1rem;
+}
 .size-125rem, .xs-up-125rem{
 	font-size:1.25rem;
 }
@@ -42,6 +45,9 @@ body{
 }
 .size-75em, .xs-up-75em{
 	font-size:0.75em;
+}
+.size-100em, .xs-up-100em{
+	font-size:1em;
 }
 .size-125em, .xs-up-125em{
 	font-size:1.25em;
@@ -66,6 +72,9 @@ body{
   .xs-75rem{
 	font-size:0.75rem;
   }
+  .xs-100rem{
+	font-size:1rem;
+  }
   .xs-125rem{
 	font-size:1.25rem;
   }
@@ -87,6 +96,9 @@ body{
   }
   .xs-75em{
 	font-size:0.75em;
+  }
+  .xs-100em{
+	font-size:1em;
   }
   .xs-125em{
 	font-size:1.25em;
@@ -115,6 +127,9 @@ body{
   .sm-up-75rem{
 	font-size:0.75rem;
   }
+  .sm-up-100rem{
+	font-size:1rem;
+  }
   .sm-up-125rem{
 	font-size:1.25rem;
   }
@@ -136,6 +151,9 @@ body{
   }
   .sm-up-75em{
 	font-size:0.75em;
+  }
+  .sm-up-100em{
+	font-size:1em;
   }
   .sm-up-125em{
 	font-size:1.25em;
@@ -160,6 +178,9 @@ body{
 	.sm-75rem{
 		font-size:0.75rem;
 	}
+	.sm-100rem{
+		font-size:1rem;
+	}
 	.sm-125rem{
 		font-size:1.25rem;
 	}
@@ -181,6 +202,9 @@ body{
 	}
 	.sm-75em{
 		font-size:0.75em;
+	}
+	.sm-100em{
+		font-size:1em;
 	}
 	.sm-125em{
 		font-size:1.25em;
@@ -209,6 +233,9 @@ body{
   .md-up-75rem{
 	font-size:0.75rem;
   }
+  .md-up-100rem{
+	font-size:1rem;
+  }
   .md-up-125rem{
 	font-size:1.25rem;
   }
@@ -230,6 +257,9 @@ body{
   }
   .md-up-75em{
 	font-size:0.75em;
+  }
+  .md-up-100em{
+	font-size:1em;
   }
   .md-up-125em{
 	font-size:1.25em;
@@ -254,6 +284,9 @@ body{
 	.md-75rem{
 		font-size:0.75rem;
 	}
+	.md-100rem{
+		font-size:1rem;
+	}
 	.md-125rem{
 		font-size:1.25rem;
 	}
@@ -275,6 +308,9 @@ body{
 	}
 	.md-75em{
 		font-size:0.75em;
+	}
+	.md-100em{
+		font-size:1em;
 	}
 	.md-125em{
 		font-size:1.25em;
@@ -304,6 +340,9 @@ body{
   .lg-up-75rem, .lg-75rem{
 	font-size:0.75rem;
   }
+  .lg-up-100rem, .lg-100rem{
+	font-size:1rem;
+  }
   .lg-up-125rem, .lg-125rem{
 	font-size:1.25rem;
   }
@@ -325,6 +364,9 @@ body{
   }
   .lg-up-75emm .lg-75em{
 	font-size:0.75em;
+  }
+  .lg-up-100emm .lg-100em{
+	font-size:1em;
   }
   .lg-up-125em, .lg-125em{
 	font-size:1.25em;
@@ -361,6 +403,9 @@ body{
 	margin-top:0;
 	margin-bottom:0;
 }
-.space-after{
+.space-fix{
 	padding-right:0.25em;
+}
+.monospace-fix{
+	padding-right:0.5em;
 }
