renamed space-fix and monspace-fix to spacefix and mono-spacefix

--- a/src/fontstrap.css
+++ b/src/fontstrap.css
@@ -403,9 +403,9 @@ body{
 	margin-top:0;
 	margin-bottom:0;
 }
-.space-fix{
+.spacefix{
 	padding-right:0.25em;
 }
-.monospace-fix{
+.mono-spacefix{
 	padding-right:0.5em;
 }
