--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -132,7 +132,7 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  transition: all .25s ease-in;
+  transition: all .25s;
 }
 *:before,
 *:after {
