--- a/src/fontstrap.css
+++ b/src/fontstrap.css
@@ -7,14 +7,14 @@
 }
 html{
 	font-size:20px;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
 
+/*
 [class*="-25em"], [class*="-25rem"], [class*="-50em"], [class*="-50rem"], [class*="-75em"], [class*="-75rem"] , [class*="-100em"], [class*="-100rem"], [class*="-125em"], [class*="-125rem"], [class*="-150em"], [class*="-150rem"], [class*="-175em"], [class*="-175rem"], [class*="-200em"], [class*="-200rem"]{
 	transition:font-size .25s;
-}
+}*/
 
 .size-25rem, .xs-up-25rem{
 	font-size:0.25rem;
