added font weight control

--- a/src/fontstrap-addon.css
+++ b/src/fontstrap-addon.css
@@ -427,3 +427,32 @@
 .lspace-200rem{
 	letter-spacing:2rem;
 }
+
+/*adjust font weight... weight-# or font-<xlight, light, normal, bold, xbold>*/
+.weight-100, .font-xlight{
+	font-weight: 100;
+}
+.weight-200, .font-light{
+	font-weight: 200;
+}
+.weight-300{
+	font-weight: 300;
+}
+.weight-400, .font-normal{
+	font-weight: 400;
+}
+.weight-500{
+	font-weight: 500;
+}
+.weight-600{
+	font-weight: 600;
+}
+.weight-700, .font-bold{
+	font-weight: 700;
+}
+.weight-800{
+	font-weight: 800;
+}
+.weight-900, .font-xbold{
+	font-weight: 900;
+}
